# ludum-50

./: Cargo.toml  README.md
src/: components.rs  main.rs  resources.rs  systems.rs  utils.rs
src/components/: ai.rs  aim_vector.rs  animation_state.rs  collision.rs  direction.rs  position.rs  skills.rs  state.rs  stats.rs  velocity.rs
src/resources/: animations.rs
src/systems/: ai.rs  ai_spawner.rs  animate_sprites.rs  animation.rs  collision.rs  combat.rs  determine_direction.rs  map_builder.rs  player_input.rs  player_spawner.rs  process_movement.rs  process_states.rs  states.rs
src/utils/: transform.rs
